# SCP_Conversion_Project

./: .gitignore  README.md  cgicc-configure.patch  cgicc-package.scm  pagesWithErrors.txt  scipnet-package.scm  scp-archive-package.scm  scp-scraper-package.scm  soci-package.scm
data/: exampleNginx.conf
data/customFrontPage/: batch.json
data/customFrontPage/pages/__front-page/: data.json  frontpage.txt
data/webroot/: robots.txt
data/webroot/__static/: linkPreview.js  pdfStyle.css  sigma9Backup.css  style.css
data/webroot/static/: style.css
sourceCode/: Helpers.cpp  Helpers.h  Parser.cpp  Parser.h  ScpScraper.cbp  Scraper.cpp  Scraper.h  main.cpp
src/: dataLayout.md
src/Scipnet/: Scipnet.cbp  Scipnet.cscope_file_list  compile.sh  emscriptenCompile.sh  meson.build  scipnet.html
src/Scipnet/Scipnet/: Cli.cpp  Cli.hpp  ColorTable.cpp  ColorTable.hpp  Converter.cpp  Converter.hpp  Database.cpp  Database.hpp  Emscript.cpp  Helpers.hpp  Ncurses.cpp  Ncurses.hpp  main.cpp
src/Scipnet/Scipnet/layout/: Layout.cpp  Layout.hpp
src/ScpArchive/: ScpArchive.cbp  meson.build
src/ScpArchive/ScpArchive/: Config.cpp  Config.hpp  main.cpp
src/ScpArchive/ScpArchive/Database/: Batch.cpp  Batch.hpp  Database.cpp  Database.hpp  Importer.cpp  Importer.hpp  Json.cpp  Json.hpp
src/ScpArchive/ScpArchive/HTTP/: HtmlEntity.cpp  HtmlEntity.hpp  MarkupOutStream.cpp  MarkupOutStream.hpp
src/ScpArchive/ScpArchive/HTTP/entities/: entities.cpp  entities.h
src/ScpArchive/ScpArchive/PDF/: PDFConverter.cpp  PDFConverter.hpp
src/ScpArchive/ScpArchive/Parser/: DatabaseUtil.cpp  DatabaseUtil.hpp  HTMLConverter.cpp  HTMLConverter.hpp  MarkupOutStream.cpp  MarkupOutStream.hpp  Parser.cpp  Parser.hpp  SectionRules.cpp  SectionRules.hpp  Templater.cpp  Templater.hpp  TokenRules.cpp  TokenRules.hpp  Treer.cpp  Treer.hpp  TreerRules.cpp  TreerRules.hpp
src/ScpArchive/ScpArchive/Parser/Rules/: RuleSet.cpp  RuleSet.hpp  RuleSetUtil.hpp
src/ScpArchive/ScpArchive/Parser/Rules/RuleSets/: ARuleSet.cpp  ARuleSet.hpp  AlignRuleSet.cpp  AlignRuleSet.hpp  AnchorRuleSet.cpp  AnchorRuleSet.hpp  BasicTextRuleSet.cpp  BasicTextRuleSet.hpp  CSSRuleSet.cpp  CSSRuleSet.hpp  CenterTextRuleSet.cpp  CenterTextRuleSet.hpp  CodeRuleSet.cpp  CodeRuleSet.hpp  CollapsibleRuleSet.cpp  CollapsibleRuleSet.hpp  CommentRuleSet.cpp  CommentRuleSet.hpp  DivRuleSet.cpp  DivRuleSet.hpp  DividerRuleSet.cpp  DividerRuleSet.hpp  EntityEscapeRuleSet.cpp  EntityEscapeRuleSet.hpp  FootNoteRuleSet.cpp  FootNoteRuleSet.hpp  ForumRuleSet.cpp  ForumRuleSet.hpp  HTMLRuleSet.cpp  HTMLRuleSet.hpp  HeadingRuleSet.cpp  HeadingRuleSet.hpp  HyperLinkRuleSet.cpp  HyperLinkRuleSet.hpp  IFrameRuleSet.cpp  IFrameRuleSet.hpp  IftagsRuleSet.cpp  IftagsRuleSet.hpp  ImageRuleSet.cpp  ImageRuleSet.hpp  (+34 more)
src/ScpArchive/ScpArchive/Tests/: AutomatedTester.cpp  AutomatedTester.hpp  Tests.cpp  Tests.hpp
src/ScpArchive/ScpArchive/Tests/Database/: DatabaseTests.cpp  DatabaseTests.hpp  ImporterTests.cpp  ImporterTests.hpp  JsonTests.cpp  JsonTests.hpp
src/ScpArchive/ScpArchive/Tests/HTTP/: HtmlEntityTests.cpp  HtmlEntityTests.hpp  MarkupOutStreamTests.cpp
src/ScpArchive/ScpArchive/Tests/Parser/: HTMLConverterTests.cpp  HTMLConverterTests.hpp  MarkupOutStreamTests.cpp  MarkupOutStreamTests.hpp  ParserTests.cpp  ParserTests.hpp  TemplaterTests.cpp  TemplaterTests.hpp  TreerTests.cpp  TreerTests.hpp
src/ScpArchive/ScpArchive/UntestedUtils/: UntestedUtils.cpp  UntestedUtils.hpp
src/ScpArchive/ScpArchive/Website/: Gateway.cpp  Gateway.hpp  Website.cpp  Website.hpp
src/ScpScraper/: ScpScraper.cbp  meson.build
src/ScpScraper/ScpScraper/: main.cpp
src/ScpScraper/ScpScraper/Scraper/: Helpers.cpp  Helpers.hpp  Scraper.cpp  Scraper.hpp
src/ScpScraper/ScpScraper/Scraper/entities/: Entites.hpp
